--- a/templates/about.page.tmpl
+++ b/templates/about.page.tmpl
@@ -6,6 +6,12 @@
             <div class="col">
                 <h1>This is the about page</h1>
                  <p>This came from the template: {{index .StringMap "test"}}</p>
+
+                 <p> {{if ne (index .StringMap "remote_ip") ""}}
+                  Your remote IP address is {{index .StringMap "remote_ip"}}
+                {{else}}
+                     I dont know IP address yet. Visit <a href="/">Home Page></a> to set it.
+                {{end}}
             </div>
         </div>
     </div>
